syntax = "proto3";

package api.vehicles.service.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/api/field_behavior.proto";

option go_package = "github.com/open-farms/inventory/api/vehicles/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.vehicles.service.v1";

service VehicleService {
	rpc CreateVehicle (CreateVehicleRequest) returns (CreateVehicleResponse){
		option (google.api.http)= {
			post: "/v1/vehicles",
			body: "vehicle",
		};
	};

	rpc UpdateVehicle (UpdateVehicleRequest) returns (UpdateVehicleResponse) {
		option (google.api.http)= {
			put: "/v1/vehicles/{id}",
			body: "vehicle",
		};
	};

	rpc DeleteVehicle (DeleteVehicleRequest) returns (DeleteVehicleResponse){
		option (google.api.http)= {
			delete: "/v1/vehicles/{id}",
		};
	};

	rpc GetVehicle (GetVehicleRequest) returns (GetVehicleResponse){
		option (google.api.http)= {
			get: "/v1/vehicles/{id}",
		};
	};

	rpc ListVehicle (ListVehicleRequest) returns (ListVehicleResponse){
		option (google.api.http)= {
			get: "/v1/vehicles/",
		};
	};
}


message Vehicle {
	uint64 id = 1;
	string make = 2;
	string model = 3;
	string year = 4;
	bool active = 5;
	repeated string tags = 6;

	enum Condition {
		UNSPECIFIED = 0;
		MINT = 1;
		GOOD = 2;
		POOR = 3;
		BROKEN = 4;
	}

	Condition condition = 7;

	google.protobuf.Timestamp created_at = 8;
	google.protobuf.Timestamp updated_at = 9;
}

message CreateVehicleRequest {
	Vehicle vehicle = 1;
}

message CreateVehicleResponse {
	Vehicle vehicle = 1;
}

message UpdateVehicleRequest {
	uint64 id = 1;
	Vehicle vehicle = 2;
}

message UpdateVehicleResponse {
	Vehicle vehicle = 1;
}

message DeleteVehicleRequest {
	uint64 id = 1;
}

message DeleteVehicleResponse {
	uint64 id = 1;
}

message GetVehicleRequest {
	uint64 id = 1;
}

message GetVehicleResponse {
	Vehicle vehicle = 1;
}

message ListVehicleRequest {}

message ListVehicleResponse {
	repeated Vehicle vehicles = 1;
}